Fix spacing

--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -35,7 +35,7 @@
     .terminal {
       border-radius: 5px;
       overflow: hidden;
-      margin: 70px 0 50px;
+      margin: 70px 0 20px;
       text-align: left;
 
       .terminal-header {
@@ -61,7 +61,7 @@
     }
 
     .requirements {
-      margin-top: 20px;
+      margin-bottom: 20px;
       text-align: center;
       color: darkgrey;
       font-size: 0.8rem;
